# CommunityCompiler

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  appveyor.yml  build.bat  update.bat  update.sh
ebnf/: syntax.ebnf
examples/: main.ds
src/: ast.h  codegen.c  codegen.h  duskc.h  duskc.hpp  globalStorage.c  globalStorage.cpp  interpret.c  interpret.h  lexer.c  lexer.h  list.c  main.c  main.cpp  parser.c  parser.h  stretchy_buffers.c  stretchy_buffers.h  string.c  string.h  vector.c  vector.h
